Fix spacing and horizontal bar on mobile

--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -3,14 +3,13 @@
 header {
   padding: 1rem 0;
   span {
-    color: #545454;
+    color: $font-color;
     font-size: 20px;
     text-transform: uppercase;
   }
   img:not(.icon) {
-    margin-left: 2rem;
     width: 178px;
-    margin-right: -10px;
+    margin: 0.55rem -10px 0 2rem;
   }
   button {
     position: absolute;
